# arxgorithm

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: daily-crawl.yml  docker-publish.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  papers.py  users.py
backend/app/core/: config.py  database.py  deps.py  embedding.py  security.py
backend/app/models/: db_models.py  paper.py  recommendation.py
backend/app/services/: recommendation_service.py  search_service.py
crawler/: Dockerfile  README.md  arxiv_client.py  embedder.py  main.py  pyproject.toml  requirements.txt
crawler/crawler/: __init__.py  arxiv_client.py  config.py  db.py  embedder.py  main.py  vector_store.py
docs/: ARCHITECTURE.md  PDD.md
frontend/: Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/app/: root.tsx  routes.ts
frontend/app/components/: PaperCard.tsx  SearchBar.tsx
frontend/app/lib/: api.ts  auth.tsx
frontend/app/routes/: bookmarks.tsx  feed.tsx  home.tsx  login.tsx  paper.$id.tsx  register.tsx  search.tsx
