[project]
name = "arxgorithm-crawler"
version = "0.1.0"
description = "arXiv paper crawler — fetch, embed, store for the arxgorithm platform"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0"
dependencies = [
    "httpx>=0.28.0,<1.0",
    "openai>=1.0,<3.0",
    "lxml>=6.1.0,<7.0",
    "asyncpg>=0.30.0,<1.0",
    "pgvector>=0.4,<1.0",
    "click>=8.1,<9.0",
    "tenacity>=8.2,<10.0",
]

[project.scripts]
crawl = "crawler.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["crawler"]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"
